 * X11 Screen: support for capturing partially hidden windows

Codecs:
 * You can now use ffmpeg-mt in conjunction with vlc
 * Important fixes for RealVideo 3.0 and 4.0 playback, notably in MKV
 * Experimental Hardware decoding using Broadcom CrystalHD cards
 * New module for decoding EBU subtitles (.stl)
 * Support for 9bits and 10bits H.264/AVC decoding
 * Support for Lagarith Lossless video codec
 * Support for 20-bits PCM and DAT-12 (digital magnetic tapes) from RTP
 * New module for Dirac encoding, using the faster libschroedinger
   The Schroedinger module should be prefered to the Dirac one
 * Support for WMV Images, aka WMVP and WVP2, as used by Photo Story
 * EIA-608 closed captions improvements
 * Support for JPEG 2000 and Motion JPEG 2000 in the Windows and Mac binaries

Demuxers:
 * New images demuxer supporting jpeg, png, targa, xcf, git, tiff, bmp, pcx, lbm
 * C64 SID file playback support using sidplay2
 * Ogg seeking improvements
 * Support for images/cover art in wma/wmv/asf files
 * Improvements in .ape files metadata reading and writing
 * New demuxer module for EBU subtitles (.stl)
 * Support for caf, mtv, awb, f4v, amr, vro (DVD-VR) files

Interfaces:
 * Skins2 / Qt: misc improvements and usability fixes
 * Qt: effects dialogs rework
 * Qt: new CoverFlow-like view of the playlist
 * Qt: port to MacOS X platform
 * Skins2: fullscreen controller support, relative placement support
   and important cleanups and optimisations
 * ncurses: heavy refactor of the complete interface
 * Mac OS X: new Audio Effects panel adding Compressor and Spatializer filters
 * Mac OS X: new Track Synchronization panel
 * Mac OS X: new Video Effects panel for color and geometry adjustments
 * Mac OS X: re-written Open Disc functionality with automatic media detection
 * Mac OS X: support for the native fullscreen mode on OS X Lion
 * The rc and telnet lua interfaces were merged into a new "cli" interface