@@ -118,7 +118,7 @@
 #define VLC_CODEC_JPEG2000  VLC_FOURCC('J','P','2','K')
 #define VLC_CODEC_LAGARITH  VLC_FOURCC('L','A','G','S')
 #define VLC_CODEC_FLASHSV2  VLC_FOURCC('F','S','V','2')
-
+#define VLC_CODEC_PRORES    VLC_FOURCC('a','p','c','n')
 
 /* Planar YUV 4:1:0 Y:V:U */
 #define VLC_CODEC_YV9       VLC_FOURCC('Y','V','U','9')
