@@ -651,6 +651,11 @@ static const entry_t p_list_video[] = {
         A("IV50"),
         A("iv50"),
 
+    B(VLC_CODEC_PRORES, "Apple ProRes 422"),
+        E("apch", "Apple ProRes 422 HQ"),
+        E("apcs", "Apple ProRes 422 LT"),
+        E("apco", "Apple ProRes 422 Proxy"),
+        E("ap4c", "Apple ProRes 4444"),
 
     /* */
     B(VLC_CODEC_YV12, "Planar 4:2:0 YVU"),
